--- a/E.html
+++ b/E.html
@@ -1,34 +1,34 @@
 <html>
 <body background="C:\Users\shiaw\Pictures\Lee\feifei.jpg" "C:\HAPPY\beijing.jpg" height="1080px" width="1200px">
 <div id="header">
-<h1>22ËêÉúÈÕ¿ìÀÖ</h1>
+<h1>22å²ç”Ÿæ—¥å¿«ä¹</h1>
 </div>
 
 <div  id="nav">
-<a href="C:\Users\shiaw\Desktop\Test\L.html" style="text-decoration:none">Éú</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\O.html" style="text-decoration:none">ÈÕ</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\V.html" style="text-decoration:none">¿ì</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\E.html"  style="text-decoration:none">ÀÖ</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\L.html" style="text-decoration:none">ç”Ÿ</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\O.html" style="text-decoration:none">æ—¥</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\V.html" style="text-decoration:none">å¿«</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\E.html"  style="text-decoration:none">ä¹</a><br>
 </div>
 
 <div id="section">
-<h1>Q£ºÀîÇìÑô³¤µÃÔõÃ´Ñù£¿</h1>
+<h1>Qï¼šæŽåº†é˜³é•¿å¾—æ€Žä¹ˆæ ·ï¼Ÿ</h1>
 <p>
-<a href="C:\Users\shiaw\Desktop\Test\A.html"  style="text-decoration:none" >A¡¢Ì«ºÃ¿´ÁË°É</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\B.html"  style="text-decoration:none">B¡¢Ì«Ë§ÁË°É</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\C.html"  style="text-decoration:none">C¡¢³ó¶«Î÷</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\A.html"  style="text-decoration:none" >Aã€å¤ªå¥½çœ‹äº†å§</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\B.html"  style="text-decoration:none">Bã€å¤ªå¸…äº†å§</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\C.html"  style="text-decoration:none">Cã€ä¸‘ä¸œè¥¿</a><br>
 </p>
 <p>
-<h1>Q£º³ÂÊææÃ³¤µÃÔõÃ´Ñù£¿</h1>
-A¡¢ºÃ¿´<br>
-B¡¢ºÃ¿´<br>
-C¡¢³ýÁËºÃ¿´»¹ÊÇºÃ¿´<br>
+<h1>Qï¼šé™ˆèˆ’å©·é•¿å¾—æ€Žä¹ˆæ ·ï¼Ÿ</h1>
+Aã€å¥½çœ‹<br>
+Bã€å¥½çœ‹<br>
+Cã€é™¤äº†å¥½çœ‹è¿˜æ˜¯å¥½çœ‹<br>
 </p>
 </div>
 
 
 <div id="footer">
-ÎÒµÄ·ÊÉúÈÕ¿ìÀÖ
+æˆ‘çš„è‚¥ç”Ÿæ—¥å¿«ä¹
 </div>
 
 </body>
