--- a/L.html
+++ b/L.html
@@ -1,14 +1,14 @@
 <html>
 <body background="C:\Users\shiaw\Pictures\Lee\feifei.jpg" "C:\HAPPY\beijing.jpg" height="1080px" width="1200px">
 <div id="header">
-<h1>22ËêÉúÈÕ¿ìÀÖ</h1>
+<h1>22å²ç”Ÿæ—¥å¿«ä¹</h1>
 </div>
 
 <div  id="nav">
-<a href="C:\Users\shiaw\Desktop\Test\L.html" style="text-decoration:none">Éú</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\O.html" style="text-decoration:none">ÈÕ</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\V.html" style="text-decoration:none">¿ì</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\E.html"  style="text-decoration:none">ÀÖ</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\L.html" style="text-decoration:none">ç”Ÿ</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\O.html" style="text-decoration:none">æ—¥</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\V.html" style="text-decoration:none">å¿«</a><br>
+<a href="C:\Users\shiaw\Desktop\Test\E.html"  style="text-decoration:none">ä¹</a><br>
 </div>
 
 <div id="section">
@@ -18,13 +18,13 @@
 </div>
 
 <div id="section">
-<h1>¸£Èç¶«º£ÊÙ±ÈÄÏÉ½</h1>
-<p>ÄãÒªÏàÐÅÎÒÊÇ°®ÄãµÄ</p>
+<h1>ç¦å¦‚ä¸œæµ·å¯¿æ¯”å—å±±</h1>
+<p>ä½ è¦ç›¸ä¿¡æˆ‘æ˜¯çˆ±ä½ çš„</p>
 <img src="C:\Users\shiaw\Pictures\Lee\22liwu.jpg" >
 </div>
 
 <div id="footer">
-ÎÒµÄ·ÊÉúÈÕ¿ìÀÖ
+æˆ‘çš„è‚¥ç”Ÿæ—¥å¿«ä¹
 </div>
 
 </body>
