--- a/C.html
+++ b/C.html
@@ -1,14 +1,18 @@
 <html>
-<body background="C:\Users\shiaw\Pictures\Lee\feifei.jpg" "C:\HAPPY\beijing.jpg" height="1080px" width="1200px">
+<head>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> 
+</head>
+<body background="C:\HAPPY\feifei.jpg" "C:\HAPPY\beijing.jpg" height="1080px" width="1200px">
 <div id="header">
 <h1>22岁生日快乐</h1>
 </div>
 
 <div  id="nav">
-<a href="C:\Users\shiaw\Desktop\Test\L.html" style="text-decoration:none">生</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\O.html" style="text-decoration:none">日</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\V.html" style="text-decoration:none">快</a><br>
-<a href="C:\Users\shiaw\Desktop\Test\E.html"  style="text-decoration:none">乐</a><br>
+<a href="C:\HAPPY\L.html" style="text-decoration:none">生</a><br>
+<a href="C:\HAPPY\O.html" style="text-decoration:none">日</a><br>
+<a href="C:\HAPPY\V.html" style="text-decoration:none">快</a><br>
+<a href="C:\HAPPY\E.html"  style="text-decoration:none">乐</a><br>
 </div>
 
 <div id="section">
