--- a/BIRTHDAY.html
+++ b/BIRTHDAY.html
@@ -1,24 +1,23 @@
 <html>
 <head>
- <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> 
 </head>
-<body background="C:\HAPPY\feifei.jpg" "C:\HAPPY\beijing.jpg" height="1080px" width="1200px">
+<body background="HAPPY\feifei.jpg" "HAPPY\beijing.jpg" height="1080px" width="1200px">
 <div id="header">
 <h1>22岁生日快乐</h1>
 </div>
 
 <div  id="nav">
-<a href="C:\HAPPY\L.html" style="text-decoration:none">生</a><br>
-<a href="C:\HAPPY\O.html" style="text-decoration:none">日</a><br>
-<a href="C:\HAPPY\V.html" style="text-decoration:none">快</a><br>
-<a href="C:\HAPPY\E.html"  style="text-decoration:none">乐</a><br>
+<a href="HAPPY\L.html" style="text-decoration:none">生</a><br>
+<a href="HAPPY\O.html" style="text-decoration:none">日</a><br>
+<a href="HAPPY\V.html" style="text-decoration:none">快</a><br>
+<a href="HAPPY\E.html"  style="text-decoration:none">乐</a><br>
 </div>
 
 <div id="section">
 <h1>福如东海寿比南山</h1>
 <p>你要相信我是爱你的</p>
-<img src="C:\HAPPY\22liwu.jpg"  align="center" height="400" width="600">
+<img src="HAPPY\22liwu.jpg"  align="center" height="400" width="600">
 </div>
 
 
